--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -38,7 +38,7 @@
 
                 <Button
                     style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
-                    android:id="@+id/new_note"
+                    android:id="@+id/save_button"
                     android:layout_width="wrap_content"
                     android:layout_height="?attr/actionBarSize"
                     android:layout_marginLeft="120dp"
