--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context=".SecondFragment">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -67,6 +68,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="70dp"
         android:text="TextView"
+        android:textColor="#ffffff"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
