--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -9,14 +9,14 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:theme="@style/Theme.CMproj2.AppBarOverlay">
 
 
         <Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="55dp"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/Theme.CMproj2.PopupOverlay"
             app:titleTextColor="@android:color/white">
@@ -33,26 +33,31 @@
                     android:gravity="center"
                     android:text="Note taker"
                     android:textColor="#ffffff"
-                    android:textSize="25sp" />
+                    android:textSize="25dp" />
 
-                <Button
-                    android:id="@+id/save_button"
-                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
-                    android:layout_width="wrap_content"
-                    android:layout_height="?attr/actionBarSize"
-                    android:layout_marginLeft="100dp"
-                    android:text="Save"
-                    android:textColor="@color/white" />
-
-                <Button
-                    android:id="@+id/back_button"
-                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
-                    android:layout_width="wrap_content"
-                    android:layout_height="?attr/actionBarSize"
-                    android:layout_marginLeft="40dp"
+                <LinearLayout
+                    android:layout_width="0dip"
+                    android:layout_height="55dp"
+                    android:orientation="horizontal"
                     android:layout_weight="1"
-                    android:text="Back"
-                    android:textColor="@color/white" />
+                    android:gravity="right">
+                    <Button
+                        android:id="@+id/save_button"
+                        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
+                        android:layout_width="wrap_content"
+                        android:layout_height="?attr/actionBarSize"
+                        android:text="Save"
+                        android:textColor="@color/white" />
+
+                    <Button
+                        android:id="@+id/back_button"
+                        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
+                        android:layout_width="wrap_content"
+                        android:layout_height="?attr/actionBarSize"
+                        android:text="Back"
+                        android:textColor="@color/white" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
