--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:background="#222224"
     tools:context=".SecondFragment">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -17,7 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="#333335"
             app:popupTheme="@style/Theme.CMproj2.PopupOverlay"
             app:titleTextColor="@android:color/white">
 
@@ -31,8 +31,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="?attr/actionBarSize"
                     android:gravity="center"
-                    android:text="Note taker"
-                    android:textColor="#ffffff"
+                    android:text="Note Taker"
+                    android:textColor="#35afb8"
                     android:textSize="25sp" />
 
                 <Button
@@ -42,17 +42,17 @@
                     android:layout_height="?attr/actionBarSize"
                     android:layout_marginLeft="100dp"
                     android:text="Save"
-                    android:textColor="@color/white" />
+                    android:textColor="#35afb8" />
 
                 <Button
                     android:id="@+id/back_button"
                     style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                     android:layout_width="wrap_content"
                     android:layout_height="?attr/actionBarSize"
-                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="4dp"
                     android:layout_weight="1"
                     android:text="Back"
-                    android:textColor="@color/white" />
+                    android:textColor="#35afb8" />
 
             </LinearLayout>
 
