--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -4,20 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:textColor="@color/white"
     android:background="#222224"
     tools:context=".SecondFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="wrap_content"
         android:theme="@style/Theme.CMproj2.AppBarOverlay">
 
 
         <Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_height="?attr/actionBarSize"
             android:background="#333335"
             app:popupTheme="@style/Theme.CMproj2.PopupOverlay"
             app:titleTextColor="@android:color/white">
@@ -33,32 +32,27 @@
                     android:layout_height="?attr/actionBarSize"
                     android:gravity="center"
                     android:text="Note Taker"
-                    android:textColor="@color/teal_700"
-                    android:textSize="25dp" />
+                    android:textColor="#35afb8"
+                    android:textSize="25sp" />
 
-                <LinearLayout
-                    android:layout_width="0dip"
-                    android:layout_height="55dp"
-                    android:orientation="horizontal"
+                <Button
+                    android:id="@+id/save_button"
+                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
+                    android:layout_width="wrap_content"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_marginLeft="100dp"
+                    android:text="Save"
+                    android:textColor="#35afb8" />
+
+                <Button
+                    android:id="@+id/back_button"
+                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
+                    android:layout_width="wrap_content"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_marginRight="4dp"
                     android:layout_weight="1"
-                    android:gravity="right">
-                    <Button
-                        android:id="@+id/save_button"
-                        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
-                        android:layout_width="wrap_content"
-                        android:layout_height="?attr/actionBarSize"
-                        android:text="Save"
-                        android:textColor="@color/teal_700" />
-
-                    <Button
-                        android:id="@+id/back_button"
-                        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
-                        android:layout_width="wrap_content"
-                        android:layout_height="?attr/actionBarSize"
-                        android:text="Back"
-                        android:textColor='@color/teal_700' />
-
-                </LinearLayout>
+                    android:text="Back"
+                    android:textColor="#35afb8" />
 
             </LinearLayout>
 
@@ -74,19 +68,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="70dp"
         android:text="TextView"
-        android:textColor="@color/white"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-
-    <EditText
-        android:id="@+id/text_note"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="110dp"
-        android:ems="10"
         android:textColor="#ffffff"
-        android:background="@android:color/transparent"
-        android:hint='Escreva aqui a nota'
-        android:textColorHint="#aeaeaf"/>
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
