--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:textColor="@color/white"
+    android:background="@color/black"
     tools:context=".SecondFragment">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -73,7 +74,19 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="70dp"
         android:text="TextView"
-        android:textColor="#ffffff"
+        android:textColor="@color/white"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+    <EditText
+        android:id="@+id/text_note"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="110dp"
+        android:ems="10"
+        android:textColor="@color/white"
+        android:background="@android:color/transparent"
+        android:hint='Escreva aqui a nota'
+        android:textColorHint="#DDFFFFFF"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
