--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:background="#222224"
     tools:context=".FirstFragment">
 
 
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             app:titleTextColor="@android:color/white"
-            android:background="?attr/colorPrimary"
+            android:background="#333335"
             app:popupTheme="@style/Theme.CMproj2.PopupOverlay">
 
             <LinearLayout
@@ -32,9 +32,9 @@
                     android:id="@+id/app_title"
                     android:layout_width="wrap_content"
                     android:layout_height="?attr/actionBarSize"
-                    android:text="Note taker"
+                    android:text="Note Taker"
                     android:textSize="25dp"
-                    android:textColor="#ffffff"
+                    android:textColor="@color/teal_700"
                     android:gravity="center"/>
 
                 <LinearLayout
@@ -49,7 +49,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="?attr/actionBarSize"
                         android:text="Nova Nota"
-                        android:textColor="@color/white" />
+                        android:textColor="@color/teal_700" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -65,10 +65,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="55dp"
-        android:background="@android:color/transparent"
-        android:backgroundTint="@android:color/transparent"
+        android:background="#222224"
+        android:backgroundTint="#222224"
         android:foregroundGravity="center_horizontal"
-        android:divider="#ffffff"
+        android:divider="#aeaeaf"
         android:dividerHeight="2px"
         android:textAlignment="center">
 
