--- a/app/src/main/res/menu/second_menu.xml
+++ b/app/src/main/res/menu/second_menu.xml
@@ -2,8 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/new_note"
+        android:id="@+id/save_button"
         app:showAsAction="ifRoom"
-        android:title="New">
+        android:title="save">
+    </item>
+    <item
+        android:id="@+id/back_button"
+        app:showAsAction="ifRoom"
+        android:title="back">
     </item>
 </menu>
