--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/new_note"
         app:showAsAction="ifRoom"
-        android:title="New">
+        android:title="Nova Nota">
     </item>
 </menu>
